# 02-VisualOdometry

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README  README.MD
02-VisualOdometry/: CMakeLists.txt  Makefile  README  cmake_install.cmake
02-VisualOdometry/src/: main.cpp
exec/: icp_test.cpp  match_points_test.cpp  pose_recovery_test.cpp  triangulate_points_test.cpp  vo.cpp
output/: errors.txt  estimated_trajectory.txt  estimated_trajectory_scaled.txt  estimated_world_points.txt
src/: cam.cpp  cam.h  data_point.h  defs.h  main.cpp  my_utilities.cpp  my_utilities.h  picp_solver.cpp  picp_solver.h  plot_data.py
